output/api/0.3.0/html/_sources/index.txt
Colour Science for Python
=========================

..  image:: https://raw.githubusercontent.com/colour-science/colour-branding/master/images/Colour_Logo_Medium_001.png

`Colour <https://github.com/colour-science/colour>`_ is a `Python <https://www.python.org/>`_ colour science package implementing a comprehensive number of colour theory transformations and algorithms.

It is open source and freely available and under the `New BSD License <http://opensource.org/licenses/BSD-3-Clause>`_ terms.

Features
--------

`Colour <https://github.com/colour-science/colour>`_ features a rich dataset and collection of objects, please see the `highlights <https://colour-science.org/features.php>`_ page for more information.

Installation
------------

The installation procedure is described in the `Installation Guide <https://colour-science.org/installation.php>`_.

Usage
-----

The two main references for `Colour <https://github.com/colour-science/colour>`_ usage are the complete sphinx :doc:`API Reference <api>` and the `IPython Notebooks <http://nbviewer.ipython.org/github/colour-science/colour-ipython/blob/master/notebooks/colour.ipynb>`_ with detailed historical and theoretical context and images:

-   :doc:`API Reference <api>`
-   `IPython Notebooks <http://nbviewer.ipython.org/github/colour-science/colour-ipython/blob/master/notebooks/colour.ipynb>`_

.. raw:: html

    <div id="hidden-toctree">

.. toctree::

   colour

.. raw:: html

    </div>


Contributing
------------

If you would like to contribute to `Colour <https://github.com/colour-science/colour>`_, please refer to the following `contributing <https://colour-science.org/contributing.php>`_ guide.

Changes
-------

The changes are viewable on the `releases <https://github.com/colour-science/colour/releases>`_ page.

About
-----

| **Colour** by Colour Developers - 2013 - 2014
| Copyright © 2013 - 2014 – Colour Developers – `colour-science@googlegroups.com <colour-science@googlegroups.com>`_
| This software is released under terms of New BSD License: http://opensource.org/licenses/BSD-3-Clause
| `http://github.com/colour-science/colour <http://github.com/colour-science/colour>`_
